# profile-query

./: README.md  profile-query.cabal  stack.yaml  test.prof
app/: Main.hs
